added SDPA with torch.compile

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "pth-tutorial"
 version = "0.1.0"
-description = "Add your description here"
+description = "torch.compile tutorial"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
